--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-headings": "^3.3.3",
     "react-icons": "^5.5.0",
     "sanity": "^3.80.1",
     "styled-components": "^6.1.16",
