--- a/package.json
+++ b/package.json
@@ -13,50 +13,57 @@
     "start": "bun run next:start",
     "sanity:typegen": "mkdir -p ./.sanity && sanity schema extract --path=.sanity/schema.json && sanity typegen generate",
     "typecheck": "tsc --noEmit",
-    "watch-typegen": "tsx watch-typegen.ts"
+    "watch-typegen": "tsx watch-typegen.ts",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.10",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.2",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.80.1",
+    "@sanity/vision": "^3.88.2",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.5.0",
-    "lucide-react": "^0.477.0",
-    "next": "15.2.0",
-    "next-sanity": "^9.9.5",
+    "framer-motion": "^12.10.4",
+    "lucide-react": "^0.508.0",
+    "next": "15.3.2",
+    "next-sanity": "^9.11.0",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-headings": "^3.3.3",
     "react-icons": "^5.5.0",
-    "sanity": "^3.80.1",
+    "sanity": "^3.88.2",
     "sanity-plugin-asset-source-unsplash": "^3.0.3",
     "sanity-plugin-media": "^3.0.2",
     "sonner": "^2.0.3",
-    "styled-components": "^6.1.16",
-    "tailwind-merge": "^3.0.2",
+    "styled-components": "^6.1.18",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "eslint-config-prettier": "^10.0.2",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.3",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.5",
     "tsx": "^4.19.4",
-    "typescript": "^5"
+    "typescript": "^5.8.0"
+  },
+  "lint-staged": {
+     "*.{ts,tsx,js,jsx}": "eslint --cache --fix",
+    "*.{ts,tsx,js,css,md}": "prettier --write"
   }
 }
