feat: style footer and add description

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.2",
+    "@sanity/cli": "^3.90.0",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.88.2",
@@ -63,7 +64,7 @@
     "typescript": "^5.8.0"
   },
   "lint-staged": {
-     "*.{ts,tsx,js,jsx}": "eslint --cache --fix",
+    "*.{ts,tsx,js,jsx}": "eslint --cache --fix",
     "*.{ts,tsx,js,css,md}": "prettier --write"
   }
 }
