--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.2",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
@@ -26,6 +27,7 @@
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "esv-sdk": "^0.4.0",
     "fathom-client": "^3.7.2",
     "framer-motion": "^12.10.4",
     "lucide-react": "^0.525.0",
