--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "noto",
         "novalue",
         "Sectionstype",
-        "sonner"
+        "sonner",
+        "typegen",
+        "WCAG"
     ]
 }
