--- a/package.json
+++ b/package.json
@@ -23,59 +23,59 @@
     "test:ci": "vitest run --coverage --reporter=verbose"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@sanity/icons": "^3.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^4.0.0",
+    "@sanity/vision": "^4.5.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
-    "framer-motion": "^12.10.4",
-    "lucide-react": "^0.539.0",
-    "next": "15.4.6",
-    "next-sanity": "^10.0.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "0.541.0",
+    "next": "15.5.0",
+    "next-sanity": "^10.0.13",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-headings": "^3.3.3",
     "react-icons": "^5.5.0",
-    "sanity": "^4.0.0",
-    "sanity-plugin-asset-source-unsplash": "^3.0.3",
+    "sanity": "^4.5.0",
+    "sanity-plugin-asset-source-unsplash": "^3.1.0",
     "sanity-plugin-media": "^4.0.0",
-    "sonner": "^2.0.3",
-    "styled-components": "^6.1.18",
-    "tailwind-merge": "^3.2.0",
+    "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@axe-core/react": "^4.10.2",
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@testing-library/jest-dom": "^6.6.4",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@types/jest-axe": "^3.5.9",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^5.0.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.4.6",
-    "eslint-config-prettier": "^10.1.3",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "jest-axe": "^10.0.0",
     "jsdom": "^26.1.0",
-    "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.1.5",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.0",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.12",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
