--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.1",
+    "@vitejs/plugin-react": "^4.3.0",
+    "rollup": "^4.21.0",
+     "@types/estree": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.34.0",
     "eslint-config-next": "15.5.0",
@@ -76,10 +78,16 @@
     "tailwindcss": "^4.1.12",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vite": "^5.4.0",
+    "vitest": "^2.1.0"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "eslint --cache --fix",
     "*.{ts,tsx,js,css,md}": "prettier --write"
+  },
+  "overrides": {
+    "vite": "^5.4.0",
+    "rollup": "^4.21.0",
+    "@types/estree": "^1.0.6"
   }
 }
