--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.5.0",
     "@vercel/analytics": "^1.5.0",
+    "caniuse-lite": "^1.0.30001737",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
