--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
     "framer-motion": "^12.23.12",
-    "lucide-react": "0.542.0",
-    "next": "15.5.0",
-    "next-sanity": "^10.0.15",
+    "lucide-react": "^0.544.0",
+    "next": "^15.5.3",
+    "next-sanity": "^11.1.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -72,7 +72,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "jest-axe": "^10.0.0",
-    "jsdom": "^26.1.0",
+    "jsdom": "^27.0.0",
     "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
