fix: restore linting and tidy theme mounting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "next:build": "bun run sanity:typegen && next build",
     "next:start": "next start",
     "next:debug": "NEXT_PRIVATE_DEBUG_CACHE=1 next:build && next:start",
-    "lint": "next lint",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "dev": "bun run next:dev & bun run watch-typegen",
     "built": "bun run next:build",
     "start": "bun run next:start",
