--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "scripts": {
     "next:dev": "next dev --turbopack",
-    "next:build": "bun run sanity:typegen && next build",
+    "next:build": "next build",
     "next:start": "next start",
     "next:debug": "NEXT_PRIVATE_DEBUG_CACHE=1 next:build && next:start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "dev": "bun run next:dev & bun run watch-typegen",
-    "built": "bun run next:build",
+    "dev": "bun run next:dev",
+    "built": "npx sanity typegen generate & bun run next:build",
     "start": "bun run next:start",
     "sanity:typegen": "mkdir -p ./.sanity && sanity schema extract --path=.sanity/schema.json && sanity typegen generate",
     "typecheck": "tsc --noEmit",
-    "watch-typegen": "tsx watch-typegen.ts",
     "prepare": "husky",
     "test": "vitest",
     "test:run": "vitest run",
@@ -28,23 +27,23 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.20.3",
+    "@sanity/image-url": "^2.0.2",
+    "@sanity/vision": "^4.21.1",
     "@vercel/analytics": "^1.6.1",
-    "caniuse-lite": "^1.0.30001759",
+    "caniuse-lite": "^1.0.30001760",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
-    "framer-motion": "^12.23.25",
-    "lucide-react": "^0.548.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-headings": "^3.3.3",
     "react-icons": "^5.5.0",
-    "sanity": "^4.20.3",
+    "sanity": "^4.21.1",
     "sanity-plugin-asset-source-unsplash": "^4.0.1",
     "sanity-plugin-media": "^4.1.0",
     "sonner": "^2.0.7",
@@ -55,19 +54,19 @@
   "devDependencies": {
     "@axe-core/react": "^4.11.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest-axe": "^3.5.9",
-    "@types/node": "^24.10.2",
+    "@types/node": "^25.0.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.7.0",
     "rollup": "^4.53.3",
     "@types/estree": "^1.0.8",
     "@vitest/coverage-v8": "^4.0.0",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.8",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.5.4",
@@ -77,7 +76,7 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^5.4.19",
